--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
       <li>
         <a target="_blank " href="https://github.com/Swadeshit27 ">Swadesh Pal</a>
       </li>
+       <li>
+        <a target="_blank " href="https://github.com/Satyam666 ">Satyam Kumar</a>
+      </li>
       <li>
         <a target="_blank " href="https://github.com/harsha094 ">harsha094</a>
       </li>
